add lesson and topic
