# LearningService/api/swagger/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: "0.0.1"
   title: Hello World App
 # during dev, should point to your local machine
-host: localhost:10010
+host: localhost:8003
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -18,25 +18,163 @@ consumes:
 produces:
   - application/json
 paths:
-  /hello:
+  /lessons:
     # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
+    x-swagger-router-controller: lesson
     get:
       description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
+      operationId: getLessons
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/MessageResp"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      description: Returns 'Hello' to the caller
+      operationId: addLesson
       parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
+        - in: body
+          name: body
+          description: parameters with username & password.
+          schema:
+            $ref: '#/definitions/LessonReq'
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/MessageResp"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /lessons/{lessonId}:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: lesson
+    get:
+      description: Returns 'Hello' to the caller
+      operationId: findOneLesson
+      parameters:
+        - in: path
+          name: lessonId
           type: string
+          required: true
+          description: description of paramete
       responses:
         "200":
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/MessageResp"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      description: Returns 'Hello' to the caller
+      operationId: updateLesson
+      parameters:
+        - in: path
+          name: lessonId
+          type: string
+          required: true
+          description: description of paramete
+        - in: body
+          name: body
+          description: parameters with username & password.
+          schema:
+            $ref: '#/definitions/LessonReq'
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/MessageResp"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /topics:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: topic
+    get:
+      description: Returns 'Hello' to the caller
+      operationId: getAllTopic
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/MessageResp"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      description: Returns 'Hello' to the caller
+      operationId: addTopic
+      parameters:
+        - in: body
+          name: body
+          description: parameters with username & password.
+          schema:
+            $ref: '#/definitions/TopicReq'
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/MessageResp"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /topics/{topicId}:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: topic
+    get:
+      description: Returns 'Hello' to the caller
+      operationId: getOneTopic
+      parameters:
+        - in: path
+          name: topicId
+          type: string
+          required: true
+          description: description of paramete
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/MessageResp"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      description: Returns 'Hello' to the caller
+      operationId: updateTopic
+      parameters:
+        - in: path
+          name: topicId
+          type: string
+          required: true
+          description: description of paramete
+        - in: body
+          name: body
+          description: parameters with username & password.
+          schema:
+            $ref: '#/definitions/TopicReq'
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/MessageResp"
         # responses may fall through to errors
         default:
           description: Error
@@ -46,12 +184,38 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
+  LessonReq:
     required:
-      - message
+      - title
+      - content
+      - topicId
+      - headId
     properties:
+      content:
+        type: string
+      topicId:
+        type: string
+      headId:
+        type: string
+      title:
+        type: string
+  TopicReq:
+    required:
+      - name
+    properties:
+      name:
+        type: string
+  MessageResp:
+    type: object
+    required: 
+      - success
+    properties:
+      success:
+        type: boolean
       message:
         type: string
+      value:
+        type: object
   ErrorResponse:
     required:
       - message
